fix layout bug on ff

--- a/src/insights-app/insights-header/index.styl
+++ b/src/insights-app/insights-header/index.styl
@@ -23,6 +23,7 @@
     margin-left auto
 
     .add-to-dash
+      display inline-flex
       z-index 1
 
       add-to-dash
